--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,13 +7,23 @@
 body {
     background-color: #d9dcd6;
 }
+.headerband, h1{
+    display: inline-block;
+}
 
 .header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
+    overflow: auto;
+      
+
 }
+
+
+
+
 
 h1 {
     display: inline-block;
@@ -84,6 +94,8 @@ p {
     height: 100%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
+    overflow: auto;
+    
 }
 
 .benefit-lead, .benefit-brand, .benefit-cost  {
@@ -120,6 +132,8 @@ h3 {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #0072bb;
     color: #ffffff;
+    overflow: auto;
+
 }
 
 /* .online-reputation-management {
